--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #f7f7f7;
+    background-color: #FFC0CB; /* rosado pastel */
 }
 
 .container {
